kubernetes/infra/controllers/prometheus-operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    toolkit.fluxcd.io/tenant: sre-team
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "self-signed"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.flux.local
      secretName: grafana-ingress-tls
  rules:
    - host: grafana.flux.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80

# https://grafana.com/docs/grafana-cloud/kubernetes-monitoring/how-to/prometheus/remote_write_helm_operator/
